# llamajsons

./: CONTRIBUTING.md  Instructor-cookbook-scripts_combined 2.txt  README.md  pyproject.toml  requirements.txt  run_explorer.py  setup.py  tox.ini
docs/: api-reference.md  api.md  contributing.md  index.html  index.md  installation.md  quickstart.md  usage-guide.md  usage.md
docs/api/: index.html
examples/: README.md  api_usage.py  run_demo.sh  simple_demo.py
llama_output/: atomic-physics_report.json  atomic-physics_report.md  atomic-physics_report.txt  coderdata_report.json  coderdata_report.md  coderdata_report.txt  coherent.cli_report.json  coherent.cli_report.md  coherent.cli_report.txt  drug-resolver_report.json  drug-resolver_report.md  drug-resolver_report.txt  drug-suggestor_report.json  drug-suggestor_report.md  drug-suggestor_report.txt  html2text-rs_report.json  html2text-rs_report.md  html2text-rs_report.txt  master_bagbag.txt  master_click.txt  master_flask.txt  master_numpy.txt  master_pandas.txt  master_psf_requests.txt  master_requests.txt  pharmacokinetics_report.json  pharmacokinetics_report.md  pharmacokinetics_report.txt  simple-header_report.json  simple-header_report.md  simple-header_report.txt
llama_output/cache/: package_info_bagbag.json  package_info_click.json  package_info_fastapi.json  package_info_flask.json  package_info_numpy.json  package_info_pandas.json  package_info_requests.json  package_info_rich.json
llamajsons/: __init__.py  client.py
src/llama_explorer/: __init__.py  (+3 more)
tests/: __init__.py  test_client.py  test_explorer.py
(+10 files in other folders)
